--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Upload To PyPi
       env:
-        PYPI_RC: ${{ secrets.PYPI_FIGGY_CLI }}
+        PYPI_RC: ${{ secrets.PYPI_RC }}
       run: |
         echo "${PYPI_RC}" > ~/.pypirc
         cd src
