Fixing build, improving version parsing

--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Prep Release
       id: prep
       run: |
-        cd cli
+        cd src
         # Parse version
         VERSION=$(./scripts/get_version.sh)
         echo "Setting release version to $VERSION"
