--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -37,7 +37,7 @@ jobs:
         # Parse version
         VERSION=$(./scripts/get_version.sh)
         echo "Setting release version to $VERSION"
-        echo "::set-env name=RELEASE_VERSION::$VERSION"
+        echo "RELEASE_VERSION=$VERSION" >> $GITHUB_ENV
 
         # Parse changelog
         CHANGELOG=$(cat CHANGELOG.md)
